clang/test/BSC/Negative/Trait/GenericTrait/implicit_cast_trait3/implicit_cast_trait3.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> { // expected-note {{declared here}}
  int foo(This* this);
};

_Trait F<int>* get() {
  int a = 1;
  return &a; // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found 'int'}}
};

int int::foo(int* this) {
  return 0;
}

_Impl _Trait F<int> for int;

int main() {
  _Trait F* f = get(); // expected-error {{template 'F' cannot be referenced with a _Trait specifier}}
  return 0;
}
